namespaces/live.cloud-platform.service.justice.gov.uk/offender-events-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: offender-events-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "offender-events"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/prison-offender-events.git"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts"
    cloud-platform.justice.gov.uk/slack-channel: "dps_tech_team"
    cloud-platform.justice.gov.uk/team-name: "dps-tech-team"
